# project_0

./: .gitignore  CMakeLists.txt  gamecore.cpp  gamecore.h  gamecore.hpp  main.cpp  map.cpp  map.h  objectmanager.h  readme.md
maps/: level_0.xml  map.xml
models/: box.xml  wyvern.mtl
shaders/: textureshading.frag  textureshading.vert
src/: game.cpp  game.hpp  main.cpp
src/core/: core.hpp  object_manager.cpp  object_manager.hpp
src/core/graphics_engine/: graphics_engine.cpp  graphics_engine.hpp  graphics_engine_GL.cpp  graphics_engine_GL.hpp  graphics_engine_GLES.cpp  graphics_engine_GLES.hpp  graphics_engine_GL_legacy.cpp  graphics_engine_GL_legacy.hpp  graphics_engine_vao_manager.cpp  graphics_engine_vao_manager.hpp
src/core/map/: loader_tmx.cpp  loader_tmx.hpp  loader_xml.cpp  loader_xml.hpp  map.hpp  tmx_loader.cpp  tmx_loader.hpp
src/core/other/: command_line_parser.cpp  command_line_parser.hpp  config.cpp  config.hpp  debug.cpp  debug.hpp  file.cpp  file.hpp  io_manager.cpp  io_manager.hpp  log.cpp  log.hpp  misc.cpp  misc.hpp  physics.cpp  physics.hpp  timer.cpp  timer.hpp
src/core/resource_management/: font_manager.cpp  font_manager.hpp  music_manager.cpp  music_manager.hpp  object_manager.cpp  object_manager.hpp  sound_manager.cpp  sound_manager.hpp  sprite_sheet_manager.cpp  sprite_sheet_manager.hpp  texture_manager.cpp  texture_manager.hpp
